# ChangeLog for sys-boot/grub
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.224 2012/07/01 21:31:16 floppym Exp $

  01 Jul 2012; Mike Gilbert <floppym@gentoo.org>
  +files/grub-2.00-manpage-race.patch,
  -files/grub-2.00-10_linux-genkernel.patch, grub-2.00.ebuild, grub-9999.ebuild:
  Add patch to fix build race for bug 424231 by Wonko.

  29 Jun 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00.ebuild,
  grub-9999.ebuild:
  Extend workaround for sandbox bug 404013.

  29 Jun 2012; Mike Gilbert <floppym@gentoo.org> grub-0.97-r12.ebuild:
  grub-0.97 does not actually install files in /usr/lib, so don't copy that
  directory's content to /boot/grub.

  29 Jun 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00.ebuild,
  grub-9999.ebuild:
  Replace lzo with xz-utils, bug 424045 by Andrey Volkov.

  29 Jun 2012; Jeff Horelick <jdhore@gentoo.org> grub-2.00.ebuild:
  Keyword ~x86 wrt bug 424019

  29 Jun 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00.ebuild,
  grub-9999.ebuild:
  Add ~amd64 keyword for grub:2.

  29 Jun 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00.ebuild,
  grub-9999.ebuild:
  Add required use for qemu/truetype, bug 405741 by jlec.

  29 Jun 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00.ebuild,
  grub-9999.ebuild:
  Depend on bison, bug 380019.

  28 Jun 2012; Mike Gilbert <floppym@gentoo.org> files/grub.default-2:
  Fix typos in grub.default, #424005 by Chris Mayo.

  28 Jun 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00.ebuild:
  Add ewarn message with instructions for adding grub:0 to the world file.

*grub-2.00 (28 Jun 2012)

  28 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> +files/grub.default-2,
  -grub-2.00_beta0.ebuild, -grub-2.00_beta1.ebuild, -grub-2.00_beta2.ebuild,
  -grub-2.00_beta2-r1.ebuild, -grub-2.00_beta3.ebuild,
  -grub-2.00_beta3-r2.ebuild, -grub-2.00_beta5.ebuild, -grub-2.00_rc1.ebuild,
  +grub-2.00.ebuild, grub-9999.ebuild: